[tool.poetry]
name = "module-6-harisafriansyah"
version = "0.1.0"
description = ""
authors = ["harisafriansyah <harisafriansyahnew@gmail.com>"]
readme = "README.md"

packages = [
    { include = "app" }
]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
flask = "^3.0.3"
sqlalchemy = "^2.0.35"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
flask-migrate = "^4.0.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-flask = "^1.3.0"
coverage = "^7.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
